--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,14 +21,20 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
+- task: SonarCloudPrepare@1
+  inputs:
+    SonarCloud: 'sonar-service'
+    organization: 'azindranil'
+    scannerMode: 'MSBuild'
+    projectKey: 'DemoAZDevOps'
+    projectName: 'azindranil'
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
     msbuildArgs: '/p:DeployOnBuild=true /p:WebPublishMethod=Package /p:PackageAsSingleFile=true /p:SkipInvalidConfigurations=true /p:PackageLocation="$(build.artifactStagingDirectory)"'
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
-
-- task: VSTest@2
+- task: SonarCloudAnalyze@1
+- task: SonarCloudPublish@1
   inputs:
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    pollingTimeoutSec: '300'
